--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ title: Functional Logic Programming
 navbar-links:
   About:  "about.html"
   FLOPS:
+     - FLOPS 2026: "events/flops/2026/"
      - FLOPS 2024: "events/flops/2024/"
 
 ################
